--- a/backend/AuctionApp.Api/appsettings.json
+++ b/backend/AuctionApp.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "A7zB4eF2gH5jK8mP3qR6tC9uV1xY0zW8_sB4dF7gJ0mL3nQ5rT8vX1zC2a",
+    "Issuer": "https://app-subasta-backend.azurewebsites.net",
+    "Audience": "https://app-subasta.azurewebsites.net"
+  }
 }
